드림씨어터 연습

--- a/css/dreamtheatre.css
+++ b/css/dreamtheatre.css
@@ -133,13 +133,8 @@ header {
     }
     .gnbTit.active {
         color: red;
-        transition: .5s;
     }
     .inner.active {
-        display: flex !important;
+        display: flex;
     }
-    .innerMenu {
-        display: flex !important;
-    }
-
 }
