--- a/css/dreamtheatre.css
+++ b/css/dreamtheatre.css
@@ -4,12 +4,17 @@
     font-style: normal;
 }
 header {
+    position: fixed;
+    width: 100%;
+    top:0;
+    left: 0;
+    z-index: 999;
+    background-color: white;
+    color: black;
     font-family: 'Pretendard';
-    background-color: darkcyan;
 }
 .hwrap {
     width: 100%;
-    background-color: darkcyan;
 }
 .hrow1 {
     display: flex;
@@ -83,8 +88,73 @@ header {
 .hrow3 .inner > li:last-child {
     padding-bottom: 0;
 }
+/* 헤더 끝 */
+/*-------------------------------------*/
+.s1 {
+    /* position: relative; */
+}
+.mainSlider {
+    position: relative;
+}
+.s1 .mainSlider .slide {
+    width: 100px;
+    height: 100vh;
+}
+.s1 .slide1 {
+    background: url('../images/main_banner1.png') no-repeat center / cover;
+}
+.s1 .slide2 {
+    background: url('../images/main_banner1.png') no-repeat center / cover;
+}
+.s1 .slide3 {
+    background: url('../images/main_banner1.png') no-repeat center / cover;
+}
+.s1 .slick-dots {
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    position: absolute;
+    bottom: 0;
+    left: 0;
+    width: 100%;
+    height: 200px;
+    background-color: rgba(0, 0, 0, .7);
+}
+.s1 .slick-dots button {
+    position: relative;
+    border: 0;
+    width: 100px;
+    height: 150px;
+    margin: 0 5px;
+}
+.s1 .slick-dots li:nth-child(1) button {
+    background: url('../images/main_poster1.jpg') no-repeat center / cover;
+}
+.s1 .slick-dots li:nth-child(2) button {
+    background: url('../images/main_poster1.jpg') no-repeat center / cover;
+}
+.s1 .slick-dots li:nth-child(3) button {
+    background: url('../images/main_poster1.jpg') no-repeat center / cover;
+}
+.s1 .slick-dots button.active {
+    border: 5px solid #aaa;
+}
+.s1 .slick-dots button.active::before {
+    content: '';
+    position: absolute;
+    top:0;
+    left: 0;
+    width: 100%;
+    height: 100%;
+    background-color: rgba(0,0,0,.5);
+}
+
 
 @media screen and (min-width: 786px){
+    header {
+        background-color: transparent;
+        color: white;
+    }
     .navBg {
         display: none;
     }
@@ -122,7 +192,6 @@ header {
         top: 155px;
         left: 0;
         width: 100%;
-        background-color: darkcyan;
         border-top: 1px solid #ccc;
     }
     .hrow3 .inner > li {
